# learning-django-permissions

./: LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: manage.py
src/learning_permissions/: asgi.py  settings.py  urls.py  wsgi.py
src/users/: views.py
